--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.fruct.oss.visitkarelia"
+    android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,8 +9,14 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -21,6 +28,38 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.fruct.oss.visitkarelia.MapActivity"
+            android:label="@string/title_activity_map"
+            android:parentActivityName="org.fruct.oss.visitkarelia.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.fruct.oss.visitkarelia.MainActivity" />
+        </activity>
+        <activity
+            android:name="org.fruct.oss.visitkarelia.NearbyActivity"
+            android:label="@string/title_activity_nearby"
+            android:parentActivityName="org.fruct.oss.visitkarelia.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.fruct.oss.visitkarelia.MainActivity" />
+        </activity>
+        <activity
+            android:name="org.fruct.oss.visitkarelia.FavourActivity"
+            android:label="@string/title_activity_favour"
+            android:parentActivityName="org.fruct.oss.visitkarelia.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.fruct.oss.visitkarelia.MainActivity" />
+        </activity>
+        <activity
+            android:name="org.fruct.oss.visitkarelia.TravellogActivity"
+            android:label="@string/title_activity_travellog"
+            android:parentActivityName="org.fruct.oss.visitkarelia.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.fruct.oss.visitkarelia.MainActivity" />
         </activity>
     </application>
 
