--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,43 +22,35 @@
         android:theme="@style/Theme.Tourme" >
         <activity
             android:name="org.fruct.oss.tourme.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.MapActivity"
-            android:label="@string/map">
-            <!-- android:parentActivityName="org.fruct.oss.tourme.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.fruct.oss.tourme.MainActivity" /> -->
+            android:label="@string/map"
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.NearbyActivity"
             android:label="@string/nearby"
-            android:parentActivityName="org.fruct.oss.tourme.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.fruct.oss.tourme.MainActivity" />
+            android:launchMode="singleTask" >
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.FavourActivity"
             android:label="@string/favourites"
-            android:parentActivityName="org.fruct.oss.tourme.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.fruct.oss.tourme.MainActivity" />
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.TravellogNewPostActivity"
             android:label="@string/travellog" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.fruct.oss.tourme.MainActivity" />
+                android:value="org.fruct.oss.tourme.MainActivity"
+                android:parentActivityName="org.fruct.oss.tourme.TravellogActivity" />
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.ArticleActivity"
@@ -66,10 +58,8 @@
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.TravellogActivity"
-            android:label="@string/travellog" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.fruct.oss.tourme.MainActivity" />
+            android:label="@string/travellog"
+            android:launchMode="singleTask" >
         </activity>
         <activity
             android:name="org.fruct.oss.tourme.MapChooserActivity"
