--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/nutiteq-3d-sdk-2.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/javaproj-1.0.6-noawt.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
