--- a/TourMe/build.gradle
+++ b/TourMe/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:18.0.+'
-    compile files('src/main/libs/nutiteq-3d-sdk-2.2.1.jar')
+    compile files('src/main/libs/javaproj-1.0.6-noawt.jar')
     compile files('src/main/libs/universal-image-loader-1.8.6.jar')
+    compile files('src/main/libs/nutiteq-3d-sdk-2.2.1.jar')
 }
