--- a/TourMe/build.gradle
+++ b/TourMe/build.gradle
@@ -22,6 +22,7 @@ android {
     }
     buildTypes {
         release {
+            debuggable false
             runProguard true
             proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
         }
