--- a/TourMe/src/main/AndroidManifest.xml
+++ b/TourMe/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name="org.fruct.oss.tourme.MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask"
+			android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
