--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 02 19:12:42 MSK 2014
-sdk.dir=/home/alexander/android-studio/sdk
+#Fri Jan 24 15:35:59 MSK 2014
+sdk.dir=C\:\\Users\\Alexander\\AppData\\Local\\Android\\android-studio\\sdk
