--- a/TourMe/src/main/AndroidManifest.xml
+++ b/TourMe/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-		android:debuggable="false"
         android:allowBackup="true"
+        android:debuggable="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Tourme" >
         <activity
             android:name="org.fruct.oss.tourme.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:launchMode="singleTask"
-			android:configChanges="orientation|screenSize">
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -83,6 +83,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.fruct.oss.tourme.MainActivity" />
+        </activity>
+        <activity
+            android:name="org.fruct.oss.tourme.AboutActivity"
+            android:label="@string/title_activity_about"
+            android:parentActivityName="org.fruct.oss.tourme.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
         </activity>
     </application>
 
