--- a/TourMe/build.gradle
+++ b/TourMe/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:0.9.+'
     }
 }
 apply plugin: 'android'
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:18.0.+'
+    compile 'com.android.support:support-v4:+'
     compile files('src/main/libs/javaproj-1.0.6-noawt.jar')
     compile files('src/main/libs/systembartint.jar')
     compile files('src/main/libs/universal-image-loader-1.8.6.jar')
