--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 29 16:14:26 MSK 2014
-sdk.dir=D\:\\AndroidStudio\\sdk
+#Thu Jun 12 09:07:12 MSK 2014
+sdk.dir=/home/alexander/android-studio/sdk
